# $Id$

# icons -- Icons for the web site
# Copyright (C) 1996-99,2004 Uwe Girlich
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 2 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program; if not, write to the Free Software
# Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
#
# Uwe Girlich (uwe@planetquake.com)

#****************************************************************************#
# Makefile.am  -  automake file                                              #
#****************************************************************************#

include $(srcdir)/wpurc
include $(top_srcdir)/spec/Make.spec.rules

UPLOAD_FILES_misc=FreePower2.1.gif anybrowser3.gif
UPLOAD_DIR_misc=$(PACKAGE)

